@@ -1,6 +1,8 @@
 changelog
     version 2.1.11
         - Fixing message moduleload() windows system
+        - renameStep accepts the same name
+        - dependency replacement method accepts NA
         
     version 2.1.10
         - management and compute running option names
